--- a/templates/main.html
+++ b/templates/main.html
@@ -8,7 +8,7 @@
 </head>
 <body style="background-color: lightblue;font-family: verdana;">
 
-<h1><a href="/">YouTube Downloader</a></h1>
+<h1><a href="/" style="color: black; text-decoration: none;">YouTube Downloader</a></h1>
 
 <form method="POST">
   {% csrf_token %}
@@ -38,7 +38,7 @@
 
 <div style="float:left;">
    {% for stream in streams_list %}
-    <p><a href="{% url 'download' stream.itag %}">Download</a> - {{ stream.type }}  ({{ stream.filesize }} MB
+    <p><a href="{% url 'download' yt.video_id stream.itag %}">Download</a> - {{ stream.type }}  ({{ stream.filesize }} MB
         {{ stream.mime_type }}{% if stream.fps %}, {{ stream.resolution }}, {{ stream.fps }} fps{% endif %})</p>
     {% endfor %}
 </div>
